port a couple of tweaks from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-13-branch@54974 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/configure.ac
+++ b/configure.ac
@@ -581,7 +581,7 @@ R_PROG_BROWSER
 ## PDF viewer
 R_PROG_PDFVIEWER
 ## Noweb
-AC_PATH_PROG(NOTANGLE, notangle)
+AC_PATH_PROG(NOTANGLE, notangle, false)
 
 ## Cairo needs pkg-config
 AC_PATH_PROG(PKGCONF,pkg-config,[],[$PATH:/usr/local/bin:/ext/bin:/ext:/sw/bin:/opt/bin])
@@ -2391,11 +2391,15 @@ AM_CONDITIONAL(USE_RECOMMENDED_PACKAGES,
 # gettextize -f -c --intl
 AM_NLS
 if test "${USE_NLS}" = "yes"; then
+  echo
+  echo "Configuring src/extra/intl directory"
   AM_GNU_GETTEXT_VERSION(0.14.5)
   AM_GNU_GETTEXT([no-libtool], [need-ngettext], [../extra/intl])
   if test -n "$INTL_MACOSX_LIBS"; then
     XTRA_INTL_CPPFLAGS=-I/System/Library/Frameworks/CoreFoundation.framework/Headers
   fi
+  echo "Finished configuring src/extra/intl directory"
+  echo
 else
   USE_INCLUDED_LIBINTL=no
 fi
