add support for multilib toolchains
git-svn-id: https://svn.r-project.org/R/trunk@55076 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/MkRules.dist
+++ b/src/gnuwin32/MkRules.dist
@@ -39,6 +39,9 @@ BINPREF =
 # prefix for 64-bit: usually this, but not for native x64 builds.
 BINPREF64 = x86_64-w64-mingw32-
 
+# Others use a -m64 or -m32 option to select architectures
+M_ARCH =
+
 # 32- or 64-bit Windows?
 WIN = 32
 
