--- a/src/gnuwin32/fixed/Makefile
+++ b/src/gnuwin32/fixed/Makefile
@@ -27,6 +27,7 @@ ifeq "$(WIN)" "64"
 	  -e "s|IMPDIR = bin|IMPDIR = $(IMPDIR)|" \
 	  -e "s|LOCAL_SOFT =|LOCAL_SOFT = $(LOCAL_SOFT)|" \
 	  -e "s|R_ARCH =|R_ARCH = $(R_ARCH)|" \
+	  -e "s|M_ARCH =|M_ARCH = $(M_ARCH)|" \
 	  -e "s|@SYMPAT@|$(SYMPAT)|" \
 	  -e "s|(TCL_HOME)/bin|(TCL_HOME)/bin64|" \
 	  etc/Makeconf > $(R_HOME)/etc$(R_ARCH)/Makeconf
@@ -35,6 +36,7 @@ else
 	  -e "s/BINPREF =/BINPREF = $(BINPREF)/" \
 	  -e "s|LOCAL_SOFT =|LOCAL_SOFT = $(LOCAL_SOFT)|" \
 	  -e "s|R_ARCH =|R_ARCH = $(R_ARCH)|" \
+	  -e "s|M_ARCH =|M_ARCH = $(M_ARCH)|" \
 	  -e "s|@SYMPAT@|$(SYMPAT)|" \
 	  etc/Makeconf > $(R_HOME)/etc$(R_ARCH)/Makeconf
 endif
