--- a/src/scripts/R.sh.in
+++ b/src/scripts/R.sh.in
@@ -140,7 +140,7 @@ while test -n "${1}"; do
     CMD)
       shift;
       export R_ARCH
-      . ${R_HOME}/etc${R_ARCH}/ldpaths
+      . "${R_HOME}/etc${R_ARCH}/ldpaths"
       exec sh "${R_HOME}/bin/Rcmd" @OSF_SH_BUG@ ;;
     -g|--gui)
       if test -n "`echo ${2} | ${SED} 's/^-.*//'`"; then      
@@ -224,7 +224,7 @@ while test -n "${1}"; do
   shift
 done
 
-. ${R_HOME}/etc${R_ARCH}/ldpaths
+. "${R_HOME}/etc${R_ARCH}/ldpaths"
 
 R_binary="${R_HOME}/bin/exec${R_ARCH}/R"
 export R_ARCH
