Switch to jpeg-8c for default build
git-svn-id: https://svn.r-project.org/R/trunk@55112 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/bitmap/Makefile
+++ b/src/gnuwin32/bitmap/Makefile
@@ -1,7 +1,7 @@
 ## These can be overridden in MkRules.dist or MkRules.local
 
-## must be jpeg-6b or jpeg-7 or jpeg-8 or jpeg-8a
-JPEGDIR = jpeg-8a
+## must be jpeg-6b or jpeg-7 or jpeg-8 or jpeg-8a or jpeg-8c
+JPEGDIR = jpeg-8c
 PNGDIR = libpng
 TIFFDIR = libtiff
 
