--- a/Makefile.in
+++ b/Makefile.in
@@ -191,6 +191,8 @@ distdir: $(DISTFILES) vignettes
 	done
 	@cp library/grid/doc/*.pdf library/grid/doc/index.html \
 	  $(distdir)/src/library/grid/inst/doc
+	@cp library/utils/doc/*.pdf library/utils/doc/index.html \
+	  $(distdir)/src/library/utils/inst/doc
 	@(cd $(distdir); tools/link-recommended)
 
 dvi info pdf:
