--- a/Makefile.in
+++ b/Makefile.in
@@ -189,10 +189,8 @@ distdir: $(DISTFILES) vignettes
 	      | (cd $(distdir); $(TAR) -x -f -)) \
 	    || exit 1; \
 	done
-	@cp library/grid/doc/*.pdf library/grid/doc/index.html \
-	  $(distdir)/src/library/grid/inst/doc
-	@cp library/utils/doc/*.pdf library/utils/doc/index.html \
-	  $(distdir)/src/library/utils/inst/doc
+	@cp library/grid/doc/*.pdf $(distdir)/src/library/grid/inst/doc
+	@cp library/utils/doc/*.pdf $(distdir)/src/library/utils/inst/doc
 	@(cd $(distdir); tools/link-recommended)
 
 dvi info pdf:
