--- a/src/gnuwin32/MkRules.dist
+++ b/src/gnuwin32/MkRules.dist
@@ -77,7 +77,7 @@ MIKTEX = TRUE
 
 ## ====== configuration macros for building installer ===========
 
-# location where Inno Setup 5.3.x was installed. Spaces allowed.
+# location where Inno Setup 5.[34].x was installed. Spaces allowed.
 ISDIR=C:/packages/Inno
 
 # optional location where qpdf was installed (in $(QPDF)/bin). Spaces allowed.
@@ -90,7 +90,7 @@ HOME32=
 
 # location where WiX 3.x executables were installed. Spaces allowed.
 # The MSI uses '/bin': other packagings may not
-WIX3DIR=C:/packages/WiX3.0/bin
+WIX3DIR=C:/packages/WiX3.5/bin
 
 # set to 1 for a non-elevated per-user installer
 WIX_PERSONAL=0
