--- a/src/gnuwin32/fixed/Makefile
+++ b/src/gnuwin32/fixed/Makefile
@@ -26,7 +26,8 @@ ifeq "$(WIN)" "64"
 	  -e "s/BINPREF =/BINPREF = $(BINPREF)/" \
 	  -e "s|IMPDIR = bin|IMPDIR = $(IMPDIR)|" \
 	  -e "s|LOCAL_SOFT =|LOCAL_SOFT = $(LOCAL_SOFT)|" \
-	  -e "s|R_ARCH =|R_ARCH = $(R_ARCH)|" \
+	  -e "s|DT_ARCH =|DT_ARCH = $(DT_ARCH)|" \
+	  -e "s|RC_ARCH =|RC_ARCH = $(RC_ARCH)|" \
 	  -e "s|M_ARCH =|M_ARCH = $(M_ARCH)|" \
 	  -e "s|@SYMPAT@|$(SYMPAT)|" \
 	  -e "s|(TCL_HOME)/bin|(TCL_HOME)/bin64|" \
@@ -35,7 +36,8 @@ else
 	$(SED) -e "s|IMPDIR = bin|IMPDIR = $(IMPDIR)|" \
 	  -e "s/BINPREF =/BINPREF = $(BINPREF)/" \
 	  -e "s|LOCAL_SOFT =|LOCAL_SOFT = $(LOCAL_SOFT)|" \
-	  -e "s|R_ARCH =|R_ARCH = $(R_ARCH)|" \
+	  -e "s|DT_ARCH =|DT_ARCH = $(DT_ARCH)|" \
+	  -e "s|RC_ARCH =|RC_ARCH = $(RC_ARCH)|" \
 	  -e "s|M_ARCH =|M_ARCH = $(M_ARCH)|" \
 	  -e "s|@SYMPAT@|$(SYMPAT)|" \
 	  etc/Makeconf > $(R_HOME)/etc$(R_ARCH)/Makeconf
