updates and cleanups
git-svn-id: https://svn.r-project.org/R/trunk@55183 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/Makefile
+++ b/src/gnuwin32/Makefile
@@ -311,12 +311,11 @@ pdfdocs manuals:
 
 R_EXE = ../../$(BINDIR)/Rterm.exe --vanilla --slave
 
+## FIXME: move to src/library/Makefile.win
 vignettes:
-	@for pkg in $(R_PKGS_BASE); do \
-	  if test -d "../library/$${pkg}/inst/doc"; then \
+	@for pkg in grid utils; do \
 	    echo "building/updating vignettes for package '$${pkg}' ..."; \
 	    (echo "tools:::.install_package_vignettes(\"../library/$${pkg}\", \"../../library/$${pkg}\")") | R_DEFAULT_PACKAGES="utils,tools" $(R_EXE) > /dev/null; \
-	  fi; \
 	done
 	@rm -rf .vignettes
 
