--- a/po/Makefile.in.in
+++ b/po/Makefile.in.in
@@ -25,6 +25,7 @@ RGUI_CATALOGS = \
   RGui-nn.po RGui-nn.gmo \
   RGui-pt_BR.po RGui-pt_BR.gmo \
   RGui-ru.po RGui-ru.gmo \
+  RGui-tr.po RGui-tr.gmo \
   RGui-zh_CN.po RGui-zh_CN.gmo \
   RGui-zh_TW.po RGui-zh_TW.gmo
 
