move vignettes target to src/libary/Makefile.win
git-svn-id: https://svn.r-project.org/R/trunk@55217 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/Makefile
+++ b/src/gnuwin32/Makefile
@@ -279,7 +279,7 @@ distclean: clean
 	$(RM) ../../SVN-REVISION.bak
 	$(RM) rw-FAQ fixed/html/rw-FAQ.html
 	$(MAKE) -C cran clean
-	$(RM) -r .vignettes # it gets left behind if there is an error
+	$(RM) -r ../library/.vignettes # it gets left behind if there is an error
 	$(RM) -r ../../share/locale
 	$(RM) MkRules Rpwd.exe # do this last of all
 
@@ -311,13 +311,8 @@ pdfdocs manuals:
 
 R_EXE = ../../$(BINDIR)/Rterm.exe --vanilla --slave
 
-## FIXME: move to src/library/Makefile.win
 vignettes:
-	@for pkg in grid utils; do \
-	    echo "building/updating vignettes for package '$${pkg}' ..."; \
-	    (echo "tools:::.install_package_vignettes(\"../library/$${pkg}\", \"../../library/$${pkg}\")") | R_DEFAULT_PACKAGES="utils,tools" $(R_EXE) > /dev/null; \
-	done
-	@rm -rf .vignettes
+	@$(MK) -C ../library -f Makefile.win vignettes
 
 
 ## ===================== Maintainer targets ========================
